# rotors_simulator

rotors_comm/: CMakeLists.txt  package.xml
rotors_control/: CMakeLists.txt  package.xml
rotors_control/include/rotors_control/: common.h  lee_position_controller.h  parameters_ros.h  roll_pitch_yawrate_thrust_controller.h
rotors_control/launch/: lee_position_controller.launch.py
rotors_control/resources/: lee_controller_params.yaml  mav_params.yaml
rotors_control/src/nodes/: lee_position_controller_node.cpp  lee_position_controller_node.h
rotors_description/: CMakeLists.txt  package.xml
rotors_description/launch/: xacrodisplay_pelican_base.launch.xml  xacrodisplay_techpod.launch.xml
rotors_description/urdf/: multirotor_base.xacro
rotors_gazebo/: CMakeLists.txt  package.xml
rotors_gazebo/launch/: empty_world.launch.py
rotors_gazebo/launch/deprecated/: mav_hovering_example.launch.xml
rotors_gazebo/src/: hovering_example.cpp
rotors_gazebo_plugins/: CMakeLists.txt  package.xml
rotors_gazebo_plugins/include/rotors_gazebo_plugins/: gazebo_controller_interface.h  gazebo_fw_dynamics_plugin.h  gazebo_motor_model.h  gazebo_multirotor_base_plugin.h  gazebo_odometry_plugin.h  gazebo_ros_interface_plugin.h  gazebo_wind_plugin.h
rotors_gazebo_plugins/src/: gazebo_bag_plugin.cpp  gazebo_gps_plugin.cpp  gazebo_imu_plugin.cpp  gazebo_magnetometer_plugin.cpp  gazebo_ros_interface_plugin.cpp
rotors_simulator/: CMakeLists.txt  package.xml
